@@ -60,6 +60,7 @@
     justify-content: center;
     align-items: center;
     min-width: 6rem;
+    color: #ccc;
 }
 
 .ProgressTickerText {
